syntax = "proto3";

package malonaz.grpc.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/malonaz/core/genproto/grpc/v1";

// HttpCookie represents an HTTP cookie with all standard cookie attributes.
// This message is used to serialize/deserialize cookies when passing them
// through gRPC metadata between clients, servers, and gateways.
message HttpCookie {
  // name is the unique identifier for the cookie. It serves as the key
  // to retrieve the cookie's value from the cookie store.
  string name = 1;

  // value is the actual data stored in the cookie. This is associated
  // with the cookie's name and represents the information being persisted.
  string value = 2;

  // path specifies the URL path scope for which the cookie is valid.
  // Only requests to URLs matching this path will include the cookie.
  // For example, "/api" means the cookie is only sent for paths starting with /api.
  string path = 3;

  // domain determines which domain(s) can access the cookie.
  // This controls the scope of websites that will receive the cookie in requests.
  // For example, ".example.com" allows all subdomains of example.com to access it.
  string domain = 4;

  // expires is the Unix timestamp (in microseconds) indicating when the cookie
  // will expire. After this time, the browser will automatically delete the cookie.
  uint64 expires = 5;

  // max_age specifies the cookie's lifetime in seconds, providing an alternative
  // to the expires attribute with the following semantics:
  // - MaxAge = 0: No 'Max-Age' attribute is specified
  // - MaxAge < 0: Delete the cookie immediately (equivalent to 'Max-Age: 0')
  // - MaxAge > 0: The cookie expires after the specified number of seconds
  int64 max_age = 6;

  // http_only is a security flag that, when true, prevents client-side scripts
  // (e.g., JavaScript) from accessing the cookie. This provides protection
  // against Cross-Site Scripting (XSS) attacks.
  bool http_only = 7;

  // secure is a security flag that, when true, ensures the cookie is only
  // transmitted over secure HTTPS connections. This protects the cookie's
  // data from being intercepted during transmission over unencrypted connections.
  bool secure = 8;
}

// Extension definitions for protobuf descriptor options, allowing custom
// metadata to be attached to enum values and method definitions.

extend google.protobuf.EnumValueOptions {
  // trailer_key specifies a custom key name to use when this enum value
  // is sent as a gRPC trailer (metadata sent after the response body).
  string trailer_key = 23241;

  // metadata_key specifies a custom key name to use when this enum value
  // is sent as gRPC metadata (headers sent before the response body).
  string metadata_key = 23242;
}

extend google.protobuf.MethodOptions {
  // gateway_options allows attaching gateway-specific configuration
  // to individual RPC methods, controlling how the gRPC-Gateway handles them.
  GatewayOptions gateway_options = 50000;
}

// GatewayOptions provides configuration for how the gRPC-Gateway should
// handle a specific RPC method, allowing customization of gateway behavior
// on a per-method basis.
message GatewayOptions {
  // custom_mime specifies a custom MIME type to use for this method's
  // HTTP requests/responses. This overrides the default content type
  // and allows handling of non-standard formats (e.g., "application/raw-webhook").
  string custom_mime = 1;
}
